# polychase

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .style.yapf  CMakeLists.txt  README.md  build_wheel.sh  generate_stubs.sh  pyproject.toml  vcpkg.json
blender_addon/: __init__.py  addon.py  addon_preferences.py  background_images.py  blender_manifest.toml  core.py  dependency_utils.py  keyframes.py  properties.py  utils.py
blender_addon/operators/: analysis.py  keyframe_management.py  open_clip.py  pin_mode.py  refiner.py  refresh_geometry.py  scene_operations.py  tracker_management.py  tracking.py
blender_addon/operators/pin_mode/: __init__.py  keymaps.py  lock_rotation.py  masking_3d.py  operator.py  pin_mode.py  rendering.py
blender_addon/ui/: panels.py
blender_addon/wheels/: polychase-0.0.1-cp311-cp311-linux_x86_64.whl  polychase_core-0.0.1-cp311-cp311-linux_x86_64.whl  polychase_core-0.0.1-cp311-cp311-win_amd64.whl  polychase_core-0.0.2-cp311-cp311-manylinux_2_28_x86_64.whl  polychase_core-0.0.2-cp311-cp311-win_amd64.whl
cmake/: PolychaseVcpkg.cmake  appdeps.py
cpp/: CMakeLists.txt  camera_trajectory.h  database.cc  database.h  eigen_typedefs.h  forward_solver.cc  forward_solver.h  geometry.h  main.cc  opticalflow.cc  opticalflow.h  opticalflow_thread.h  pin_mode.cc  pin_mode.h  pnp.cc  pnp.h  polychase_pybind.cc  pose.h  pybind11_extension.h  ray_casting.cc  ray_casting.h  raycasting.cc  raycasting.h  refiner.cc  refiner.h  refiner_thread.h  tracker.cc  tracker.h  tracker_thread.h  utils.cc  utils.h
cpp/examples/: CMakeLists.txt  different_pnp.cc  generate_database.cc  jacobian.h  levmarq_ill_conditioned_float32_issue.cpp  visualize_flow.cc
cpp/feature_detection/: gftt.cc  gftt.h
cpp/pnp/: jacobian.h  lev_marq.h  lm_impl.h  pnp.cc  pnp.h  pnp_opengl.cc  pnp_opengl.h  pnp_problem.h  quaternion.h  robust_loss.h  solvers.cc  solvers.h  types.h
docker/: Dockerfile.linux  linux.Dockerfile
vcpkg-ports/embree4/: 001-no-runtime-install.patch  portfile.cmake
vcpkg-triplets/: x64-linux.cmake  x64-windows.cmake
